src/sass/block/_block.scss
// Styles for blocks provided by core and contrib modules

/** Header Image Block **/

.header-image-block {
  background: $dark;
}

.header-image-block img {
  height: 400px;
  max-height: 33vh;
  min-height: 150px;
  position: relative;
  object-fit: cover;
  object-position: center top;
  width: 100%;
  opacity: .4;
}

.page-title-container h1 {
  position: absolute;
  top: 50%;
  margin-top: -20px;
  font-size: 3.5rem;
  color: #fff;
  font-weight: bold;
}

/** Off Canvas Tray **/

#drupal-off-canvas .media-library-widget-modal .media-library-item--grid,
#drupal-off-canvas .media-library-selection .media-library-item--grid {
  width: auto;
}

/** Tour Tips **/

.joyride-tip-guide {
  z-index: 1051;
  background: rgba(0,0,0,1);
  margin-top: 15px;
}

.joyride-tip-guide h2 {
  font-size: 1.75rem;
}

